--- a/subsection_Cross_Validation_Cross_Validation__.tex
+++ b/subsection_Cross_Validation_Cross_Validation__.tex
@@ -10,7 +10,7 @@ Cross Validation (CV) is one of the most widespread techniques to evaluate the g
 
 \textbf{Tuning-parameters (hyper-parameters) Selection}:
 
-There are a number of approximating functions or algorithms to be used in the supervised learning domain. At the same time, each of these algorithms have different configurations or set ups that, when fitted, produce different learners. The differences among the configurations are controlled by the \textit{parameters} of the algorithm. The nature of each parameter might be stem from computation or statistical variants of the same algorithm. One common example of this is the $\lambda$ penalization parameter in logistic regressions. $\lambda$ controls the amount of weight to be put in the regularization term of the minimized function. 
+There are a number of approximating functions or algorithms to be used in the supervised learning domain. At the same time, each of these algorithms have different configurations or set ups that, when fitted, produce different learners. The differences among the configurations are controlled by the \textit{parameters} of the algorithm. The nature of each parameter might stem from computation or statistical variants in the algorithm used. One common example of this is the $\lambda$ penalization parameter in logistic regressions, where $\lambda$ controls the amount of weight to be put in the regularization term of the minimized function. 
 
 The objective of Cross Validation is to systematically explore the different configurations of tuning parameters and decide which learner is better for the task at hand. By comparing the estimated generalization error of each model, where models vary accordingly with the values of the tuning parameters, a value is given and then used to select the \textit{best} model in the class.
 
