--- a/section_Brief_introduction_to_machine__1.tex
+++ b/section_Brief_introduction_to_machine__1.tex
@@ -6,9 +6,15 @@ Machine learning is a subfield of computer science with broad \textit{theoeretic
 The most widely used definition of machine learning is attributed to Tom Mitchell: 	 
 "A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E" \cite{Mitchell-MLearning}. To our purpose it is clear though that this definition \footnote{Other authors might reference machine learning as \textit{statistical learning}. See \cite{hastie-elemstatslearn} as an example.} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learns} better over time and with more data. Note that the "goodness" of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this,\textit{learning} is less associated with a cognitive definition in this context and more to a performance based approach.
 
+\textbf{Bishop}
 \textit{Suppose we have an input vector $X$ together with a corresponding vector $Y$ of target variables, and our goal is to predict $Y$ given a new value for $X$. For regression problems, $Y$ will comprise continuous variables, whereas for classification problems $Y$ will represent class labels. The joint probability distribution $p(X, Y)$ provides a complete summary of the uncertainty associated with these variables. Determination of p($X$, $Y$) from a set of training data is an example of inference and is typically a very difficult problem. In a practical application, however, we must often make a specific prediction for the value of $Y$, or more generally take a specific action based on our understanding of the values $Y$ is likely to take, and this aspect is the subject of decision theory.}
 
+\textit{The general inference problem then involves determining the joint distribution of inputs and targets which gives us the most complete probabilistic description of the situation.}
 
+Classification assigns samples to classes. Let $\{C_1,..,C_k\}$ denote the set of possible target classes. We are  interested in maximizing the probability of belonging to a certain class, given the input data:
+$$p(C_k| X) = \frac{p(x|C_k)p(C_k)}{p(x)} $$
+
+In this interpretation, $p(C_k)$ is known as the prior probability of belonging to that certain class and $p(C_k|x)$ as the posterior probability, given the data.   
 
 It is divided into two main categories: Supervised and Unsupervised Learning. The difference is that in the fist case algorithms are set to produce outputs, noted by $Y$, from input data, noted by $X$ i.e. the computer has access to examples of outputs and tries to reproduce them based on information contained in $X$. In this context, the algorithm is generally referred to as a \textit{learner}.
 
