--- a/section_Logistic_Regression_Cost_Function__.tex
+++ b/section_Logistic_Regression_Cost_Function__.tex
@@ -21,7 +21,11 @@ Given a choice of parameter \theta,
 
 \textit{In this model, the probabilities describing the possible outcomes of a single trial are modeled using a logistic function.}
 
-\textit{}
+\textit{The logistic regression model arises from the desire to model the posterior probabilities of the $K$ classes via linear functions in $x$, while at the same time ensuring that they sum to one and remain in [0,1]. The model has the form }
+
+
+$$ log(Pr(C_i|x)) = \beta_{i0}  + \beta_i^\intercal x  $$
+
 
 \textit{}
 \textit{}
