--- a/section_Logistic_Regression_Cost_Function__.tex
+++ b/section_Logistic_Regression_Cost_Function__.tex
@@ -21,16 +21,22 @@ Given a choice of parameter \theta,
 
 \textit{In this model, the probabilities describing the possible outcomes of a single trial are modeled using a logistic function.}
 
-\textit{The logistic regression model arises from the desire to model the posterior probabilities of the $K$ classes via linear functions in $x$, while at the same time ensuring that they sum to one and remain in [0,1]. The model has the form }
+\textit{The logistic regression model arises from the desire to model the posterior probabilities of the $K$ classes via linear functions in $x$, while at the same time ensuring that the posteriors sum to one and remain in [0,1]. The model has the form }
 
 
-$$ log( \frac{P(C_i|x)}{P(C_j|x)}) = \beta_{i0}  + \beta_i^\intercal x  $$ for $i,j \in \{0,1\}, i\neq j$
+$$ log\big( \frac{P(C_i|x)}{P(C_j|x)}\big) = \theta_{i0}  + \theta_i^\intercal x  $$ for $i,j \in \{0,1\}, i\neq j$
 
 With these same indices 
 
-$$ P(C_i|x) = \frac{ exp(\beta_{i0}  + \beta_i^\intercal x)}{1 + exp(\beta_{j0}  + \beta_j^\intercal x)}   $$ for $i,j \in \{0,1\}, i\neq j$
+$$ P(C_i|x) = \frac{ exp(\theta_{i0}  + \theta_i^\intercal x)}{1 + exp(\theta_{j0}  + \theta_j^\intercal x)}   $$ 
 
-The model is specified in terms of the log-odds for each class 
+The model is specified in terms of the log-odds for each class and is parameterized by $\theta$.
+
+Maximum likelihood methods are comonly used to fit the model, with multinomial distributions modelling the features. 
+
+The estimation of $\theta$ for $N$ samples gives
+
+
 
 
 \textit{}
