--- a/section_Brief_introduction_to_machine__1.tex
+++ b/section_Brief_introduction_to_machine__1.tex
@@ -6,21 +6,13 @@ Machine learning is a subfield of computer science with broad \textit{theoeretic
 The most widely used definition of machine learning is attributed to Tom Mitchell: 	 
 "A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E" \cite{Mitchell-MLearning}. To our purpose it is clear though that this definition \footnote{Other authors might reference machine learning as \textit{statistical learning}. See \cite{hastie-elemstatslearn} as an example.} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learns} better over time and with more data. Note that the "goodness" of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this,\textit{learning} is less associated with a cognitive definition in this context and more to a performance based approach.
 
-\textbf{Bishop}
-\textit{Suppose we have an input vector $X$ together with a corresponding vector $Y$ of target variables, and our goal is to predict $Y$ given a new value for $X$. For regression problems, $Y$ will comprise continuous variables, whereas for classification problems $Y$ will represent class labels. The joint probability distribution $p(X, Y)$ provides a complete summary of the uncertainty associated with these variables. Determination of p($X$, $Y$) from a set of training data is an example of inference and is typically a very difficult problem. In a practical application, however, we must often make a specific prediction for the value of $Y$, or more generally take a specific action based on our understanding of the values $Y$ is likely to take, and this aspect is the subject of decision theory.}
-
-\textit{The general inference problem then involves determining the joint distribution of inputs and targets which gives us the most complete probabilistic description of the situation.}
-
-Classification assigns samples to classes. Let $\{C_1,..,C_k\}$ denote the set of possible target classes. We are  interested in maximizing the probability of belonging to a certain class, given the input data:
-$$p(C_k| X) = \frac{p(x|C_k)p(C_k)}{p(x)} $$
-
-In this interpretation, $p(C_k)$ is known as the prior probability of belonging to that certain class and $p(C_k|x)$ as the posterior probability, given the data.   
-
 It is divided into two main categories: Supervised and Unsupervised Learning. The difference is that in the fist case algorithms are set to produce outputs, noted by $Y$, from input data, noted by $X$ i.e. the computer has access to examples of outputs and tries to reproduce them based on information contained in $X$. In this context, the algorithm is generally referred to as a \textit{learner}.
 
 The second type of problems is where the output $Y$ is missing altogether from the data. In this scenario the most common objectives are clustering samples, density estimation and data compression. Linear regression and K-means clustering are examples of algorithms in each of these categories respectively.
 
 Supervised learning is then sub-categorized according to the type of information available in the data for the task at hand. When the type of the output variable $Y$ takes a discrete set of values then it is said that it is a supervised classification problem. On the other hand, when the output takes continuous (or dense in an open set of $\mathbb{R}$) range of \textit{quantitative} values, the problem is said to be of supervised regression. Note that regression problems can be encoded into classification problems by assigning categories to ranges of outputs.For this work we will focus on the supervised aspect of machine learning.
+
+Suppose our objective is to predict $y$ given a new sample $x$. In supervised regression problems, $y$ will comprise a continuous variable. for classification problems on the other hand, $y$ will represent a label for a certain class. For the case of $K$ classes, $y$ most commonly takes values in the ranges $0$ through $K-1$  or $1$ through $K$. In both cases, the joint probability distribution $p(X, Y)$, called the \textit{true} distribution, gives all of the information we need on these two variables. However the values of this probability is most often unknown. The idea is to then user estimations and inference on the most likely values for new samples and take decisions with the information at hand. These decisions will be based on the most probabilistic characterization of the data we have. 
 
 In these type of problems the theoretical and the computational aspect are both of interest. Algorithms are generally applied in a given setting and, as such, are expected to be executed in a reasonable amount of time and with a certain level of performance. \footnote{Here the word \textit{reasonable} is used in a broad sense. It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} In its essence, the machine learning method is a probabilistic model so it is very much the same as a statistical model. However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates.\cite{breiman-statisticalmodeling} The algorithms will be built and used to try and replicate as best as possible a given phenomena, without really identifying the true nature of the mechanisms behind this phenomena. As such, most applications will try to generalize a problem rather than identify the system behind it. Computational efficenciy and \textit{scalabiilty} will also be of great importance when working with these applications. However only brief references to this matter will be given in this work.
 %on this matter It also puts a great amount of weight on efficiency and computational scalability. 
