--- a/header.tex
+++ b/header.tex
@@ -35,7 +35,8 @@
 \newcommand{\calT}{\mathcal{T}}
 
 %comandos de operadores de esperanza, varianza etc.
-\newcommand{\Expect}{{\rm I\kern-.3em E}}
+%\newcommand{\Expect}{{\rm I\kern-.3em E}}
+\newcommand{\Expect}{{\mathbb{E}}}
 \newcommand{\Var}{\mathrm{Var}}
 \newcommand{\Cov}{\mathrm{Cov}} 
 
